refactor(account): rename api contract to english
