# src/main/java/com/pichincha/dm/cuaa/account/infrastructure/entrypoint/controller/AccountsController.java
@@ -1,6 +1,6 @@
 package com.pichincha.dm.cuaa.account.infrastructure.entrypoint.controller;
 
-import com.pichincha.dm.cuaa.account.infrastructure.entrypoint.controller.entities.CuentaCreateRequestDto;
+import com.pichincha.dm.cuaa.account.infrastructure.entrypoint.controller.entities.AccountCreateRequestDto;
 import java.util.UUID;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,16 +9,16 @@ import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
 @RestController
-public class CuentasController implements CuentasApi {
+public class AccountsController implements AccountsApi {
 
 	private static final ResponseEntity<Void> CREATED_RESPONSE = ResponseEntity.status(HttpStatus.CREATED).build();
 
 	@Override
-	public Mono<ResponseEntity<Void>> cuentasPost(UUID xGuid,
-												  String xApp,
-												  Mono<CuentaCreateRequestDto> cuentaCreateRequestDto,
-												  ServerWebExchange exchange) {
-		return cuentaCreateRequestDto.map(request -> CREATED_RESPONSE);
+	public Mono<ResponseEntity<Void>> createAccount(UUID xGuid,
+											  String xApp,
+											  Mono<AccountCreateRequestDto> accountCreateRequestDto,
+											  ServerWebExchange exchange) {
+		return accountCreateRequestDto.map(request -> CREATED_RESPONSE);
 	}
 
 }
